--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Stylish Portfolio - Start Bootstrap Template</title>
+  <title>AROUND Management System</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -58,16 +58,17 @@
       <h1 class="mb-1">AROUND</h1>
       <h1 class="mb-1">Management</h1>
       <h1 class="mb-1">System</h1>
-      <h3 class="mb-5">
+      <h3 class="mb-5"style="color:white">
         <em>교육. 기획. 디자인 그리고 사람에 가치를 더하다</em>
       </h3>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://accounts.google.com/" target="_blank">로그인</a>
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://calendar.google.com/calendar/b/0/r/week/2020/5/20/">일정관리</a>
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://drive.google.com/drive/shared-drives">문서관리</a>
       <a class="btn btn-primary btn-xl" href="https://mail.google.com/mail/u/0/?tab=rm&pli=1#inbox">이메일</a>
       <a class="btn btn-primary btn-xl" href="https://trello.com/">트렐로</a>
       <a class="btn btn-primary btn-xl" href="https://slack.com/intl/en-kr/">슬랙</a>
-      <a class="btn btn-primary btn-xl" href="https://zoom.us/">화상회의</a>
-      <a class="btn btn-primary btn-xl" href="https://open.kakao.com/o/g3gVH0dc">오픈채팅방</a>
+      <a class="btn btn-primary btn-xl" href="https://meet.google.com/?hs=197&pli=1&authuser=1"target="_blank">화상회의</a>
+      <a class="btn btn-primary btn-xl" href="https://zoom.us/"target="_blank">화상강의</a>
     </div>
     <div class="overlay"></div>
   </header>
